risc0/zirgen/dsl/test/repro/missing_def_value.zir
// RUN: not zirgen --emit=ast %s 2>&1 | FileCheck %s
// CHECK: error: expected an expression on right side

component Top() {
  x := ;
}

